# cpp-roguelike-cli

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/core/: character.h  enemy.h  game_constants.h  item.h  loot_table.h  player.h
src/core/classes/: mage.h  rogue.h  warrior.h
src/core/enemies/: dark_necromancer.h  goblin.h  goblin_chief.h  skeleton.h  stone_golem.h  troll.h
src/core/items/: magic_scroll.h  potion.h  weapon.h
src/core/items/weapon_types/sword/: iron_sword.h  sword.h
src/entities/: enemy.h  game_constants.h  player.h
src/entities/classes/: mage.h  rogue.h
src/entities/enemies/: goblin_chief.h  skeleton.h  stone_golem.h
src/game/: combat.cpp  combat.h  game.cpp  game.h
tests/: main_test.cpp
